--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,10 @@
   "module": "server.ts",
   "type": "commonjs",
   "private": true,
+  "scripts": {
+    "start": "node server.ts",
+    "dev": "nodemon --exec ts-node server.ts"
+  },
   "devDependencies": {
     "@types/bcryptjs": "^3.0.0",
     "@types/bun": "latest",
@@ -22,6 +26,8 @@
     "exceljs": "^4.4.0",
     "express": "^5.1.0",
     "mongoose": "^8.15.0",
-    "multer": "^2.0.0"
+    "multer": "^2.0.0",
+    "nodemon": "^3.1.10",
+    "ts-node": "^10.9.2"
   }
 }
