--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "start": "node server.ts",
-    "dev": "nodemon --exec ts-node server.ts"
+    "dev": "bun run --watch server.ts"
   },
   "devDependencies": {
     "@types/bcryptjs": "^3.0.0",
