--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.7",
     "@tailwindcss/vite": "^4.1.7",
+    "@types/jsonwebtoken": "^9.0.9",
     "axios": "^1.9.0",
+    "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "postcss": "^8.5.3",
     "react": "^19.1.0",
