--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@iconify/json": "^2.2.345",
     "@tailwindcss/postcss": "^4.1.7",
     "@tailwindcss/vite": "^4.1.7",
     "@types/jsonwebtoken": "^9.0.9",
     "axios": "^1.9.0",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.511.0",
     "moment": "^2.30.1",
     "postcss": "^8.5.3",
     "react": "^19.1.0",
@@ -23,7 +25,8 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.0",
     "recharts": "^2.15.3",
-    "tailwindcss": "^4.1.7"
+    "tailwindcss": "^4.1.7",
+    "vite-plugin-react-icons": "^0.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
