--- a/server/package.json
+++ b/server/package.json
@@ -26,8 +26,6 @@
     "exceljs": "^4.4.0",
     "express": "^5.1.0",
     "mongoose": "^8.15.0",
-    "multer": "^2.0.0",
-    "nodemon": "^3.1.10",
-    "ts-node": "^10.9.2"
+    "multer": "^2.0.0"
   }
 }
